2011-09-07  Noel Gordon  <noel.gordon@gmail.com>

        Add myself to committers.py                 
        https://bugs.webkit.org/show_bug.cgi?id=67696

        Reviewed by Kent Tamura.

        * Scripts/webkitpy/common/config/committers.py:

2011-09-07  Adam Barth  <abarth@webkit.org>

        rebaseline button in garden-o-matic details view should work
        https://bugs.webkit.org/show_bug.cgi?id=67738

        Reviewed by Dimitri Glazkov.

        This patch wires up the rebaseline button in garden-o-matic results
        details view.  The button is current per-test, so there isn't a way to
        rebaseline individual bots.  This is a place to start.  If we decide we
        want per-bot rebaselining, we'll need to think of some better UI.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/controllers.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/actions.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/results.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/styles/results.css:

2011-09-07  Eric Seidel  <eric@webkit.org>

        Teach the PortFactory object how to pass along executive/user/filesystem to port objects (which fixes the failing rebaseline_test on bots)
        https://bugs.webkit.org/show_bug.cgi?id=67737

        Reviewed by Adam Barth.

        I got a little over-eager when deprecating host.port_factory in the previous commit.
        Turns out that Host.port_factory was already the "modern" port/factory.py
        it was just the Module object.  I un-deprecated the variable, and changed it from
        being the module to being an actual PortFactory, passing it a host object.
        I also taught PortFactory how to set user/executive/filesystem in the kwargs
        when instantiating a new Port object.